# jakeops

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.claude/: mcp.json
backend/: pyproject.toml
backend/app/: logging.py  main.py
backend/app/adapters/inbound/: deliveries.py  issues.py  sources.py  worker.py
backend/app/adapters/outbound/: claude_cli.py  filesystem_delivery.py  filesystem_issue.py  filesystem_source.py  git_cli.py  github_api.py
backend/app/domain/: constants.py  prompts.py
backend/app/domain/models/: agent_output.py  agent_run.py  delivery.py  github.py  issue.py  source.py  stream.py  worker.py
backend/app/middleware/: logging.py
backend/app/usecases/: delivery_sync.py  delivery_usecases.py  issue_sync.py  issue_usecases.py  source_usecases.py
backend/tests/: conftest.py  test_agent_execution.py  test_agent_output.py  test_agent_run_model.py  test_claude_cli_stream.py  test_collect.py  test_constants.py  test_deliveries_api.py  test_delivery_model.py  test_delivery_sync.py  test_delivery_usecases.py  test_event_bus.py  test_filesystem_delivery.py  test_filesystem_issue.py  test_filesystem_source.py  test_git_cli.py  test_git_operations.py  test_github_api.py  test_issue_model.py  test_issue_sync.py  test_issue_usecases.py  test_issues_api.py  test_prompts.py  test_session_parser.py  test_source_model.py  test_source_usecases.py  test_sources_api.py  test_sse_endpoint.py  test_stream_models.py  test_stream_parser.py  test_streaming_integration.py  test_worker_registry.py  test_worker_status.py
(+104 files in other folders)
