[project]
name = "jakeops"
version = "0.1.0"
description = "AI agent orchestration hub"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
